Fixed spacing issue with brute

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+	margin: 0;
+	padding: 0;
+}
+
 .container{
 	margin: 0 auto;
 	background-color: grey;
@@ -7,5 +12,8 @@
 }
 
 input{
+	margin-top: 20px;
+	margin-left: 20px;
+	font-size: 20px;
 	padding: 20px 40px 20px 40px;
 }
